# internal/api/server.go
@@ -154,6 +154,9 @@ func StartAPIServer(ctx context.Context) {
 		v1.GET("/recommendations/openshift/settings/terms", GetTermSettings)
 		v1.PUT("/recommendations/openshift/settings/terms", PutTermSettings)
 		v1.DELETE("/recommendations/openshift/settings/terms", DeleteTermSettings)
+		v1.GET("/recommendations/openshift/settings/thresholds", GetThresholdSettings)
+		v1.PUT("/recommendations/openshift/settings/thresholds", PutThresholdSettings)
+		v1.DELETE("/recommendations/openshift/settings/thresholds", DeleteThresholdSettings)
 		v1.GET("/recommendations/openshift/settings/capabilities", GetCapabilities)
 	}
 
